# energy-model

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml
analysis/: absolute_affordability_history_gaps.csv  absolute_affordability_validation_history.csv  canada_absolute_affordability_history.csv  canadian_data_audit.md  canadian_historical_episodes.csv  canadian_historical_episodes.md  canadian_income_data_audit.md  canadian_income_indicator_catalogue.csv  canadian_indicator_catalogue.csv  current_signal_snapshot.md  economic_output_quality.csv  economic_output_quality.md  energy_burden_findings.md  energy_burden_validation.csv  energy_gdp_findings.md  energy_gdp_lead_lag.csv  energy_gdp_model_summary.csv  energy_output_quality_correlations.csv  evidence_topic_audit.md  executive_summary.md  final_findings_table.csv  final_model_interpretation.md  final_system_interpretation.md  final_time_series_chart_notes.md  food_housing_affordability_findings.md  food_housing_indicator_catalogue.csv  food_price_transmission_summary.csv  global_demography_history.csv  global_food_security_history.csv  global_human_impact_history.csv  global_human_nowcast_assessment.md  global_human_nowcast_validation.csv  global_nutrition_history.csv  historical_absolute_affordability.md  historical_episode_library.csv  historical_episode_library.md  integrated_lead_lag_atlas.md  interaction_model_summary.csv  labour_early_warning_findings.md  labour_early_warning_summary.csv  (+31 more)
config/: absolute_affordability.json  (+7 more)
(+329 files in other folders)
