[project]
name = "oil-model"
version = "0.1.0"
description = "Monthly global M2, oil price, and crude inventory model pipeline"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.0",
  "numpy>=1.20",
  "scipy>=1.8",
  "matplotlib>=3.5",
]

[project.optional-dependencies]
parquet = ["pandas>=2.0", "pyarrow>=12.0"]
dev = ["pytest>=8.0"]

[project.scripts]
oil-model-build = "oil_model.pipeline:main"

[tool.setuptools.packages.find]
include = ["oil_model*"]
